make box around the played time a bit larger to avoid overflow

--- a/Snakie/styles.css
+++ b/Snakie/styles.css
@@ -76,7 +76,7 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 18px;
-    width: 150px;
+    width: 200px;
     background-color: rgb(44, 23, 58);
     color: rgb(177, 223, 13);
     opacity: 0.6;
